--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@turf/destination": "^6.5.0",
+    "@turf/helpers": "^6.5.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -16,6 +18,7 @@
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "mapbox-gl": "^2.15.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -24,6 +27,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^2.7.13",
     "eslint-config-prettier": "^9.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-organize-imports": "^3.2.3",
